# mlcc

./: .gitmodules  LICENSE  README.md
examples/cloc/: README.md
examples/cloc/vector_copy/: Makefile  README.md
examples/cloc/vector_copy_cuda/: Makefile  README.md
examples/cloc/vector_copy_hip/: Makefile  README.md
examples/cloc/vector_copy_hip_omp/: Makefile
examples/cuda/: README.md
examples/cuda-open/: README.md
examples/cuda-open/matrixmul/: Makefile
examples/cuda-open/vectorAdd/: Makefile
examples/cuda-open/writeIndex/: Makefile
examples/cuda/matrixmul/: Makefile
examples/cuda/vectorAdd/: Makefile
examples/cuda/writeIndex/: Makefile
examples/hip/: README.md
examples/hip/matrixmul/: Makefile
examples/hip/vectorAdd/: Makefile
examples/hip/writeIndex/: Makefile
examples/hip/writeIndex_amode/: Makefile
examples/libdevice/: README.md
examples/libdevice/libm/: Makefile  libm.sh
examples/openmp/: README.md
examples/openmp/reduction/: Makefile
examples/openmp/veccopy/: Makefile
examples/openmp/vmul_template/: Makefile
examples/openmp/vmulsum/: Makefile
test/cuda-open/math_double/: Makefile
test/cuda-open/math_float/: Makefile
test/cuda-open/math_integer/: Makefile
test/cuda-open/simd/: Makefile
test/cuda-open/type_casting/: Makefile
test/hip-openmp/matrixmul_omp_copy/: Makefile
test/omptests/: omptests_run.sh
test/smoke/: Makefile  Makefile.defs  Makefile.rules  README
test/smoke/DeclareSharedMemory/: Makefile
test/smoke/assertok_error/: Makefile
test/smoke/atomic/: Makefile
test/smoke/atomic_double/: Makefile
test/smoke/class/: Makefile
test/smoke/collapse/: Makefile
test/smoke/devices/: Makefile
test/smoke/firstprivate/: Makefile
test/smoke/function/: Makefile
test/smoke/function_overload/: Makefile
test/smoke/function_template/: Makefile
test/smoke/helloworld/: Makefile
test/smoke/issue_001/: Makefile  issue_001.execute.fail
test/smoke/issue_002/: Makefile
test/smoke/issue_apps_001/: Makefile
test/smoke/liba_bundled/: Makefile
test/smoke/liba_bundled/MyDeviceLib/: Makefile
test/smoke/math_sqrt_float/: Makefile
test/smoke/nativetests/: Makefile
test/smoke/nested_loop/: Makefile
test/smoke/pfspecifier/: Makefile
test/smoke/pfspecifier_str/: Makefile
test/smoke/reduce/: Makefile
test/smoke/reduction/: Makefile
test/smoke/schedule/: Makefile
test/smoke/simd/: Makefile
test/smoke/simple_matrix_dyn_array/: Makefile  simple_matrix_dyn_array.cpp  simple_matrix_dyn_array.h
test/smoke/stream/: Makefile  cuda_sm_30.out  cuda_sm_30_nvprof.out  omp.out  omp_sm_30.out  omp_sm_30_nvprof.out
test/smoke/target-in-other-source/: Makefile
test/smoke/teams/: Makefile
test/smoke/test/: Makefile
test/smoke/threads/: Makefile
test/smoke/veccopy/: Makefile
test/smoke/vmuldemo/: Makefile
test/smoke/vmulsum/: Makefile
utils/: CMakeLists.txt
utils/src/: command_line.h  ppu_co_writer.cpp
utils/src/jit/: kernel_loader.h  llvm_ir_kernel_loader.h
utils/src/jit/attic/: CMakeLists.txt  IsaExecutor.cpp  IsaExecutor.h  executor.cpp  global_memory.h  root_func.cpp
